--- a/MvcApplication3/MvcApplication3.csproj
+++ b/MvcApplication3/MvcApplication3.csproj
@@ -76,11 +76,13 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Article.cs" />
+    <Compile Include="Models\Translation.cs" />
     <Compile Include="Models\Wiki.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Wiki.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ArticleTranslator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
